# smb-js

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build.sh  deps.sh  indax.cjs  indax.js  indax.ts  index.cjs  index.d.ts  index.js  package-lock.json  package.json  publish.sh  test-cargo.sh  test.sh  tsconfig.json
.cargo/: config.toml
.github/workflows/: node.js.yml
__test__/: index.spec.js  index.spec.ts
benchmark/: bench.js
examples/: notify_test.js
libsmb2-rs/: Cargo.toml
libsmb2-rs/src/: lib.rs
libsmb2-sys/: Cargo.toml  README.md  build.rs  wrapper.h
scripts/: deps-test.sh  setup-testdir.sh  test.sh
src/: lib.rs
src/nfs/: mod.rs
src/smb/: libsmb.rs  mock.rs  mod.rs
