[package]
name = "libsmb2-rs"
version = "0.1.2"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "libsmb2 bindings allow you to create smb mounts in memory/userspace"
homepage = "https://github.com/NetAppLabs/libsmb2-rs"
repository = "https://github.com/NetAppLabs/libsmb2-rs"
documentation = "https://docs.rs/libsmb2-rs"
license = "MIT"
readme = "README.md"
keywords = ["smb"]
categories = ["api-bindings", "network-programming", "filesystem", "external-ffi-bindings"]
edition = '2018'

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "~0.2"
libsmb2-sys = { path = "../libsmb2-sys" , version = "~0.2" }
nix = { version = "0.29.0", features = ["fs"] }
